# go-jrtp

./: .gitignore  .gitmodules  CMakeLists.txt
go-librtp/: go-librtp  go.mod  main.go
go-librtp/rtp/: session.go
include/jrtplib3/: rtpconfig.h
src/: CMakeLists.txt  jrtplib_warpper.cpp  jrtplib_warpper.h  main.cpp
